samples/_failures_safe/1761374674_b792e9_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_23488a43.c: In function ‘main’:
./samples/SAFE/__tmp_23488a43.c:157:5: error: expected expression at end of input
  157 |     int b = graph_add_node(&g,
      |     ^~~
./samples/SAFE/__tmp_23488a43.c:157:5: error: expected declaration or statement at end of input
